# ai-plan-insight

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.json.example  config.v2.json.example  pb_collections_glm.json  pyproject.toml  sample-compose.yaml  skills-lock.json
.gitea/workflows/: build.yaml
ai_plan_insight/: __main__.py  api_schemas.py  config.py  config_loader.py  config_service.py  formatter.py  index.html  instance_config.py  models.py  pocketbase_store.py  pricing.py  provider_instances.py  provider_registry.py  provider_v2_store.py  usage_store.py  web.py
ai_plan_insight.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ai_plan_insight/providers/: __init__.py  aiping.py  alibaba_cloud.py  antigravity.py  base.py  bigmodel.py  bigmodel_international.py  codex.py  huawei_cloud.py  kimi.py  mimo_token_plan.py  volcengine_ark.py  volcengine_signing.py  xfyun.py  zenmux.py
tests/: seed_fake_data.py  test-compose.yaml  test_bigmodel_history_usage.py  test_config_service.py  test_db_startup.py  test_index_history_view.py  test_index_usage_view.py  test_instance_config.py  test_main_args.py  test_mobile_ui.py  test_pocketbase_removal.py  test_pricing.py  test_provider_instances.py  test_provider_registry.py  test_provider_v2_store.py  test_push_auth.py  test_push_card_snapshot_restore.py  test_stale_sources.py  test_usage_api.py  test_usage_chart.py  test_usage_store.py  test_v2_api.py  test_web_card_order.py  test_web_history_usage.py  test_web_push_claude.py  test_web_push_grok.py  test_zenmux_provider.py
(+17 files in other folders)
