[project]
name = "ai-plan-insight"
version = "0.9.1"
description = "Display remaining usage for AI coding plan subscriptions"
requires-python = ">= 3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "fastapi>=0.120",
    "uvicorn>=0.30",
]

[project.scripts]
ai-plan-insight = "ai_plan_insight.__main__:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai_plan_insight"]

[tool.setuptools.package-data]
ai_plan_insight = ["*.html"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
